-Venom sprayer and pumpkin spicer now ignore some enemy defense
-Sunflower rods projectile now last for much shorter, but create a circle of 3 small damaging petals when they die
-Old wood staffs projectile now shoots at a much higher speed

Summon:
-Buffed spooky scroll damage from 15 to 20
-Increased enemy detection range for the swarm scepter leech minions
-Spore smacker damage nerfed from 15 to 8 and it now has 3 summon tag damage
-Cat o' nine tails now has 5 summon tag damage
-Licker now has 7 summon tag damage
-Exposed nerve damage buffed from 42 to 45
-Pheromone stinger extra spider minion damage nerfed from 40% to 20%, but it now gives 10% summon tag critical strike chance for spider minions along with the damage bonus
-Leecher now has 10 summon tag damage
-Living eye lasher damage buffed from 75 to 82

Armors:
-Rotten gourd armor stat bonuses have been buffed: Head - 10% melee crit, Body - 12% melee damage, Legs - 10% melee speed
-Rotten gourd armor set bonus no longer applies only to melee weapons, it now works with all weapons
-Gourd decay debuff from gourd armor now lowers enemy defense along with the damage over time
-Spirit horseman armor set defense and stats have been buffed: Head - 6 defense and 12% crit chance, Body - 7 defense and 15% damage, Legs - 6 defense and 20% movement speed
-Buffed spirit horseman armor head minion damage from 35 to 40
-Buffed living flesh mask and leggings defense from 3 to 4
-Buffed gore armor defense: Hood - 14 defense, Mask - 10 defense, Body - 15 defense, Legs - 12 defense
-Buffed root armor mask and garments defense from 2 to 3
-Buffed spi-ops leggings defense from 2 to 3
-Increased the amount of silver/tungsten bars and spider web blocks needed to craft each piece of the spi-ops armor

Accessory:
-Swapped the telescope and severed heads progression (telescope is now post daffodil and severed head is now post orroboro, their money values and rarity colors have been adjusted accordingly)