@@ -145,7 +145,7 @@ namespace Spooky.Content.Projectiles.SpookyHell
                 }
 
                 Projectile.NewProjectile(Projectile.GetSource_FromThis(), Projectile.Center, Vector2.Zero, 
-                ModContent.ProjectileType<ControllableEyeBigExplosion>(), Projectile.damage * 5, Projectile.knockBack, Main.myPlayer);
+                ModContent.ProjectileType<ControllableEyeBigExplosion>(), Projectile.damage * 2, Projectile.knockBack, Projectile.owner);
             }
             else
             {
